[fix] hofix -> Deploy job 이름 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  hotfix:
+  Deploy:
     # commit message가 [Deploy]로 시작하면 실행
     if: startsWith(github.event.head_commit.message, '[Deploy]')
     runs-on: ubuntu-latest
